--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,15 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.background{
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: -99;
+  width: 100%;
+  height: 100vh;
+}
+#parentCard{
+  background-color: rgba(204, 223, 255, 0.7)
+}
